--- a/app/Resources/views/category/index.html.twig
+++ b/app/Resources/views/category/index.html.twig
@@ -10,47 +10,47 @@
 {% block body %}
   <div class="container">
     <div class="row">
-      <div class="col-md-12 col-center">
+      <div class="col-md-10 col-center">
         <h1>Categorías</h1>
         <br>
-        <a class="btn btn-info float-right btn-m-r" href="{{ path('category_new') }}">Nueva categoría</a>
+        <a class="btn btn-info float-right btn-m-r mb-lg-3" href="{{ path('category_new') }}">Nueva categoría</a>
 
-          <table id="category-table" class="table row-border hover stripe" name="TABLA">
-            <thead class="thead-dark">
-              <tr>
-                <th width="80%">Nombre</th>
-                <th width="20%"></th>
-              </tr>
-            </thead>
-            <tbody>
-            {% for category in categories %}
-              <tr>
-                <td>{{ category.name }}</td>
-                <td>
-                  <a class="btn btn-success" href="{{ path('category_edit', { 'id': category.id }) }}">
-                    <i class="fa fa-pencil"></i>
-                  </a>
-                  <input class="category_id" value="{{category.id}}" hidden>
-                  <button type="button" class="button_delete btn btn-danger" data-toggle="modal" data-target="#delete_modal">
-                    <i class="fa fa-trash"></i>
-                  </button>
-                </td>
-              </tr>
-            {% else %}
-                <tr>
-                    <td colspan="2" class="text-center">
-                        <em>No category</em>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-            <tfoot>
+        <table id="category-table" class="table row-border hover stripe" name="TABLA">
+          <thead class="thead-light">
             <tr>
-                <td colspan="2" class="text-center">
-                    {{ pagination(categories, 'page') }}
-                </td>
+              <th>Nombre</th>
+              <th width="15%"></th>
             </tr>
-            </tfoot>
+          </thead>
+          <tbody>
+          {% for category in categories %}
+            <tr>
+              <td>{{ category.name }}</td>
+              <td>
+                <a class="btn btn-success" href="{{ path('category_edit', { 'id': category.id }) }}">
+                  <i class="fa fa-pencil"></i>
+                </a>
+                <input class="category_id" value="{{category.id}}" hidden>
+                <button type="button" class="button_delete btn btn-danger" data-toggle="modal" data-target="#delete_modal">
+                  <i class="fa fa-trash"></i>
+                </button>
+              </td>
+            </tr>
+          {% else %}
+            <tr>
+              <td colspan="2" class="text-center">
+                <em>No hay categorías para mostrar</em>
+              </td>
+            </tr>
+          {% endfor %}
+          </tbody>
+          <tfoot>
+          <tr>
+            <td colspan="2" class="text-center">
+              {{ pagination(categories, 'page') }}
+            </td>
+          </tr>
+          </tfoot>
         </table>
 
       </div>
