--- a/app/Resources/views/faspecie/index.html.twig
+++ b/app/Resources/views/faspecie/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Especies de Fauna {% endblock %}
+{% block title %} Especies de fauna {% endblock %}
 
 {% block stylesheets %}
   <link rel="stylesheet" type="text/css" href="{{ asset('scripts/dataTables/datatables.min.css') }}">
@@ -11,22 +11,28 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-12 col-center">
-        <h1>Especies de Fauna</h1>
+      <div class="col-md-10 col-center">
+        <h1>Especies de fauna</h1>
         <br>
-        <a class="btn btn-info float-right btn-m-r" href="{{ path('faspecie_new') }}">Nueva especie</a>
+        <a class="btn btn-info float-right btn-m-r mb-lg-3" href="{{ path('faspecie_new') }}">Nueva especie</a>
 
         <table id="faspecie-table" class="table row-border hover stripe" >
-          <thead class="thead-dark">
+          <thead class="thead-light">
             <tr>
-              <th width="70%">Nombre</th>
-              <th width="30%">Acciones</th>
+              <th width="60%">Nombre</th>
+              <th></th>
+              <th width="15%"></th>
             </tr>
           </thead>
           <tbody>
-          {% for fas in listFASpecie %}
+            {% for fas in listFASpecie %}
               <tr>
                 <td scope="row">{{ fas.name}}</td>
+                <td>
+                  <button type="button" class="button_subspecies btn btn-primary" data-toggle="modal" data-target="#subspecies_modal">
+                    Subespecies
+                  </button>
+                </td>
                 <td>
                   <a class="btn btn-success" href="{{ path('faspecie_edit', { 'id': fas.id }) }}">
                     <i class="fa fa-pencil"></i>
@@ -37,23 +43,24 @@
                   </button>
                 </td>
               </tr>
-          {% else %}
+            {% else %}
               <tr>
-                  <td colspan="3" class="text-center">
-                      <em>No FASpecie</em>
-                  </td>
+                <td colspan="3" class="text-center">
+                  <em>No hay especies de fauna para mostrar</em>
+                </td>
               </tr>
-          {% endfor %}
-          </tbody>
-          <tfoot>
-          <tr>
-              <td colspan="3" class="text-center">
+            {% endfor %}
+            </tbody>
+            <tfoot>
+              <tr>
+                <td colspan="3" class="text-center">
                   {{ pagination(listFASpecie, 'page') }}
-              </td>
-          </tr>
-          </tfoot>
+                </td>
+              </tr>
+            </tfoot>
           </tbody>
         </table>
+
       </div>
     </div>
   </div>
@@ -80,9 +87,26 @@
     </div>
   </div>
 
-{% endblock %}
-{% block javascripts %}
+  <div class="modal" id='subspecies_modal' tabindex="-1" role="dialog" style="margin-top: 5%">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Listado de subespecies</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <ul id="subespecies-list">
+          <ul>
+        </div>
+      </div>
+    </div>
+  </div>
 
+{% endblock %}
+
+{% block javascripts %}
 <script src="{{ asset('scripts/dataTables/datatables.min.js') }}"></script>
 <script>
   $(document).ready(function(){
@@ -96,13 +120,35 @@
        "info":     false
     });
   });
-</script>
 
-<script>
+  $('#faspecie-table').on("click", ".button_delete", function() {
+    var id_fas = $(this).closest('tr').find('.faspecie_id').val();
+    $('.form_m_d').attr('action', '/faspecie/'+id_fas);
+  });
 
-$('#faspecie-table').on("click", ".button_delete", function() {
-  var id_fas = $(this).closest('tr').find('.faspecie_id').val();
-  $('.form_m_d').attr('action', '/faspecie/'+id_fas);
-});
+  $('#faspecie-table').on("click", ".button_subspecies", function() {
+    $('.subspecies').remove();
+    var specie_id = $(this).closest('tr').find('.faspecie_id').val();
+
+    $.ajax({
+        url: "{{ path('listJsonFasubspecie') }}",
+        method: 'GET',
+        success: function(data) {
+          list = '';
+
+          $.each(data, function(index, option) {
+            if (option.idSpecie == specie_id) {
+              list += '<li class="subspecies">' + option.name + '</li>';
+            }
+          });
+
+          if (list.length == 0) {
+            list = '<li class="subspecies">Aún no posee subespecies</li>'
+          }
+
+          $("#subespecies-list").append(list);
+        }
+      });
+  });
 </script>
 {% endblock %}
