--- a/app/Resources/views/faspecie/new.html.twig
+++ b/app/Resources/views/faspecie/new.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Nueva especie {% endblock %}
+{% block title %} Nueva especie de fauna{% endblock %}
 
 {% block body %}
   <div class="container">
     <div class="row">
       <div class="col-md-5 col-center">
-        <h1 class="text-center">Nueva especie</h1>
+        <h1 class="text-center">Nueva especie de fauna</h1>
         <br>
         <br>
 
