--- a/app/Resources/views/fasubspecie/edit.html.twig
+++ b/app/Resources/views/fasubspecie/edit.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Editar subespecie {% endblock %}
+{% block title %} Editar subespecie de fauna {% endblock %}
 
 {% block body %}
   <div class="container">
     <div class="row">
       <div class="col-md-5 col-center">
-        <h1 class="text-center">Editar subespecie</h1>
+        <h1 class="text-center">Editar subespecie de fauna</h1>
         <br>
         <br>
 
