--- a/app/Resources/views/flora/index.html.twig
+++ b/app/Resources/views/flora/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} individuos flora {% endblock %}
+{% block title %} Individuos de flora {% endblock %}
 
 {% block stylesheets %}
   <link rel="stylesheet" type="text/css" href="{{ asset('scripts/dataTables/datatables.min.css') }}">
@@ -8,63 +8,37 @@
 {% endblock %}
 
 {% block body %}
+
 <div class="container">
-  <h1>Individuos Flora</h1>
-  <div class="jumbotron" style="padding-top: 2%; padding-bottom: 1%;">
- <h4>Buscar individuos por:</h4>
-  <form action="{{ path('flora_index') }}" method="get">
-    <div class="form-row" >
-     <div class="form-group col-md-4">
-       <label>Area</label>
-       <select id="area" class="form-control" name="area">
-         <option value=""> Seleccione </option>
-       </select>
-     </div>
-     <div class="form-group col-md-4">
-       <label>Especie</label>
-       <select id="specie" class="form-control" name="specie">
-         <option value=""> Seleccione </option>
-       </select>
-     </div>
-     <div class="form-group col-md-4">
-       <label>Sub Especie</label>
-       <select id="subspecie" class="form-control" name="subspecie">
-         <option value=""> Seleccione </option>
-       </select>
-     </div>
-     <div class="form-group col-md-12">
-        <input  id="format" type="text" hidden name="_format" value="html">
-        <button id="button" type="submit" class="btn btn-info">Buscar</button>
-        <button id="buttonClear" type="submit" class="btn btn-info">Limpiar filtros</button>
-        <button id="buttonExportPDF" type="submit" class="btn btn-info">Exportar PDF</button>
-        <button id="buttonExportXLS" type="submit" class="btn btn-info">Exportar XLS</button>
-        <a class="btn btn-info float-right btn-m-r" href="{{ path('flora_new') }}">Nuevo individuo</a>
-     </div>
-   </div>
-  </form>
-</div>
+  <h2>Individuos de flora</h2>
+  <br>
+  <a class="btn btn-info float-right btn-m-r mb-lg-6" href="{{ path('flora_new') }}">Nuevo individuo</a>
+  <br><br>
+
+  {% include 'flora/filter.html.twig' %}
+
   <div class="row">
     <div class="col-md-12 col-center">
-    <table id="flora-table" class="table row-border hover stripe" name="TABLA">
-        <thead class="thead-dark">
-            <tr>
-                <th>Especie</th>
-                <th>Subespecie</th>
-                <th>Nombre</th>
-                <th>Area</th>
-                <th>Fecha de plantación</th>
-                <th>Acciones</th>
-            </tr>
+      <table id="flora-table" class="table row-border hover stripe" name="TABLA">
+        <thead class="thead-light">
+          <tr>
+            <th>Especie</th>
+            <th>Subespecie</th>
+            <th>Nombre</th>
+            <th>Area</th>
+            <th>Fecha de plantación</th>
+            <th width="15%"></th>
+          </tr>
         </thead>
         <tbody>
-        {% for flora in floras %}
+          {% for flora in floras %}
             <tr>
-                <td>{{flora.subspecie.specie.name}}</td>
-                <td>{{ flora.subspecie.name }}</td>
-                <td>{{ flora.name }}</td>
-                <td>{{ flora.area.name }}</td>
-                <td>{{ flora.plantationDate}}</td>
-                <td>
+              <td>{{flora.subspecie.specie.name}}</td>
+              <td>{{ flora.subspecie.name }}</td>
+              <td>{{ flora.name }}</td>
+              <td>{{ flora.area.name }}</td>
+              <td>{{ flora.plantationDate}}</td>
+              <td>
                 <a class="btn btn-info" href="{{ path('flora_show', { 'id': flora.id }) }}">
                   <i class="fa fa-eye"></i>
                 </a>
@@ -75,51 +49,51 @@
                 <button type="button" class="button_delete btn btn-danger" data-toggle="modal" data-target="#delete_modal">
                   <i class="fa fa-trash"></i>
                 </button>
-                </td>
-            {% else %}
-                <tr>
-                    <td colspan="6" class="text-center">
-                        <em>No floras</em>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-            <tfoot>
-            <tr>
-                <td colspan="6" class="text-center">
-                    {{ pagination(floras, 'page') }}
-                </td>
+              </td>
             </tr>
-            </tfoot>
+          {% else %}
+            <tr>
+              <td colspan="6" class="text-center">
+                <em>No hay individuos de flora para mostrar</em>
+              </td>
+            </tr>
+          {% endfor %}
         </tbody>
-    </table>
+        <tfoot>
+          <tr>
+            <td colspan="6" class="text-center">
+              {{ pagination(floras, 'page') }}
+            </td>
+          </tr>
+        </tfoot>
+      </table>
 
     </div>
   </div>
 </div>
 
 
-  <div class="modal" id='delete_modal' tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Eliminar individuo de flora</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <p>¿Estás seguro de que deseas eliminar este individuo?</p>
-        </div>
-        <div class="modal-footer">
-          <form class="form_m_d" method="post">
-            <button type="submit" class="btn btn-primary">Eliminar</button>
-          </form>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-        </div>
+<div class="modal" id='delete_modal' tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Eliminar individuo de flora</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>¿Estás seguro de que deseas eliminar este individuo?</p>
+      </div>
+      <div class="modal-footer">
+        <form class="form_m_d" method="post">
+          <button type="submit" class="btn btn-primary">Eliminar</button>
+        </form>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
       </div>
     </div>
   </div>
+</div>
 
 {% endblock %}
 
@@ -228,13 +202,9 @@
     $('#format').val('xls');
   });
 
-</script>
-
-<script>
-
-$('#flora-table').on("click", ".button_delete", function() {
-  var id_flora = $(this).closest('tr').find('.flora_id').val();
-  $('.form_m_d').attr('action', '/flora/'+id_flora+'/delete');
-});
+  $('#flora-table').on("click", ".button_delete", function() {
+    var id_flora = $(this).closest('tr').find('.flora_id').val();
+    $('.form_m_d').attr('action', '/flora/'+id_flora+'/delete');
+  });
 </script>
 {% endblock %}
