--- a/app/Resources/views/user/index.html.twig
+++ b/app/Resources/views/user/index.html.twig
@@ -11,18 +11,18 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-12 col-center">
+      <div class="col-md-11 col-center">
         <br>
         <h1>Usuarios</h1>
         <br>
-        <a class="btn btn-info float-right btn-m-r" href="{{ path('fos_user_registration_register') }}">Nuevo usuario</a>
+        <a class="btn btn-info float-right btn-m-r mb-lg-3" href="{{ path('fos_user_registration_register') }}">Nuevo usuario</a>
 
           <table id="user-table" class="table row-border hover stripe" name="TABLA">
-            <thead class="thead-dark">
+            <thead class="thead-light">
               <tr>
-                <th width="40%">Nombre</th>
-                <th width="40%">Email</th>
-                <th width="20%">Acciones</th>
+                <th width="50%">Nombre</th>
+                <th width="35%">Email</th>
+                <th width="15%"></th>
               </tr>
             </thead>
             <tbody>
