--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,16 +1,17 @@
 {% extends "base.html.twig" %}
 
-{% block title %} Iniciar Sesion {% endblock %}
+{% block title %} Iniciar sesión {% endblock %}
 
 {% block body %}
+  <div class="container">
     <div class="row">
-        <div class="col s12 m8 offset-m2">
-            <h4 class="card-panel teal lighten-2 white-head">Iniciar Sesion</h4>
-        </div>
+      <div class="col-md-6 col-center">
+        <h1 class="text-center">Iniciar sesión</h1>
+        <br>
+        <br>
+
+        {% include "FOSUserBundle:Security:login_content.html.twig" %}
+      </div>
     </div>
-    <div class="row">
-        <div class="col s12 m8 offset-m2">
-            {% include "FOSUserBundle:Security:login_content.html.twig" %}
-        </div>
-    </div>
+  </div>
 {% endblock body %}
