--- a/app/Resources/views/fauna/index.html.twig
+++ b/app/Resources/views/fauna/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Individuos de Fauna {% endblock %}
+{% block title %} Individuos de fauna {% endblock %}
 
 {% block stylesheets %}
   <link rel="stylesheet" type="text/css" href="{{ asset('scripts/dataTables/datatables.min.css') }}">
@@ -10,119 +10,86 @@
 {% block body %}
 
 <div class="container">
-<h2>Individuos Fauna</h2>
-<div class="jumbotron" style="padding-top: 2%; padding-bottom: 1%;">
- <h4>Buscar individuos por:</h4>
-  <form action="{{ path('fauna_index') }}" method="get">
-    <div class="form-row" >
-      <div class="form-group col-md-12">
-        <label>Proximo destino</label>
-        <input type="text" id="destination" class="form-control" placeholder="Proximo destino" name="destination">
-      </div>
-     <div class="form-group col-md-6">
-       <label>Encargado</label>
-       <select id="attendants" class="form-control" name="attendants">
-         <option value=""> Seleccione </option>
-       </select>
-     </div>
-     <div class="form-group col-md-3">
-       <label>Especie</label>
-       <select id="specie" class="form-control" name="specie">
-         <option value=""> Seleccione </option>
-       </select>
-     </div>
-     <div class="form-group col-md-3">
-       <label>Sub Especie</label>
-       <select id="subspecie" class="form-control" name="subspecie">
-         <option value=""> Seleccione </option>
-       </select>
-     </div>
-     <div class="form-group col-md-12">
-        <input  id="format" type="text" hidden name="_format" value="html">
-        <button id="button" type="submit" class="btn btn-info">Buscar</button>
-        <button id="buttonClear" type="submit" class="btn btn-info">Limpiar filtros</button>
-        <button id="buttonExportPDF" type="submit" class="btn btn-info">Exportar PDF</button>
-        <button id="buttonExportXLS" type="submit" class="btn btn-info">Exportar XLS</button>
-        <a class="btn btn-info float-right btn-m-r" href="{{ path('fauna_new') }}">Nuevo individuo</a>
-     </div>
-   </div>
-  </form>
-</div>
-  <div class="row">
-    <div class="col-md-12 col-center">
+<h2>Individuos de fauna</h2>
+<br>
+<a class="btn btn-info float-right btn-m-r mb-lg-6" href="{{ path('fauna_new') }}">Nuevo individuo</a>
+<br><br>
+
+{% include 'fauna/filter.html.twig' %}
+
+<div class="row">
+  <div class="col-md-12 col-center">
     <table id="fauna-table" class="table row-border hover stripe" name="TABLA">
-        <thead class="thead-dark">
-            <tr>
-                <th>Especie</th>
-                <th>Subespecie</th>
-                <th>Nombre</th>
-                <th>Peso</th>
-                <th>Acciones</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for fauna in faunas %}
-            <tr>
-                <td>{{fauna.subspecie.specie.name}}</td>
-                <td>{{ fauna.subspecie.name }}</td>
-                <td>{{ fauna.name }}</td>
-                <td>{{ fauna.weight }}</td>
-                <td>
-                <a class="btn btn-info" href="{{ path('fauna_show', { 'id': fauna.id }) }}">
-                  <i class="fa fa-eye"></i>
-                </a>
-                <a class="btn btn-success" href="{{ path('fauna_edit', { 'id': fauna.id }) }}">
-                  <i class="fa fa-pencil"></i>
-                </a>
-                <input class="fauna_id" value="{{fauna.id}}" hidden>
-                <button type="button" class="button_delete btn btn-danger" data-toggle="modal" data-target="#delete_modal">
-                  <i class="fa fa-trash"></i>
-                </button>
-                </td>
-            </tr>
-            {% else %}
-                <tr>
-                    <td colspan="5" class="text-center">
-                        <em>No fauna</em>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-            <tfoot>
-            <tr>
-                <td colspan="5" class="text-center">
-                    {{ pagination(faunas, 'page') }}
-                </td>
-            </tr>
-            </tfoot>
-        </tbody>
+      <thead class="thead-light">
+        <tr>
+          <th>Especie</th>
+          <th>Subespecie</th>
+          <th>Nombre</th>
+          <th>Peso</th>
+          <th width="15%"></th>
+        </tr>
+      </thead>
+      <tbody>
+      {% for fauna in faunas %}
+        <tr>
+          <td>{{fauna.subspecie.specie.name}}</td>
+          <td>{{ fauna.subspecie.name }}</td>
+          <td>{{ fauna.name }}</td>
+          <td>{{ fauna.weight }}</td>
+          <td>
+            <a class="btn btn-info" href="{{ path('fauna_show', { 'id': fauna.id }) }}">
+              <i class="fa fa-eye"></i>
+            </a>
+            <a class="btn btn-success" href="{{ path('fauna_edit', { 'id': fauna.id }) }}">
+              <i class="fa fa-pencil"></i>
+            </a>
+            <input class="fauna_id" value="{{fauna.id}}" hidden>
+            <button type="button" class="button_delete btn btn-danger" data-toggle="modal" data-target="#delete_modal">
+              <i class="fa fa-trash"></i>
+            </button>
+          </td>
+        </tr>
+      {% else %}
+        <tr>
+          <td colspan="5" class="text-center">
+            <em>No hay individuos de fauna para mostrar</em>
+          </td>
+        </tr>
+      {% endfor %}
+      </tbody>
+      <tfoot>
+        <tr>
+          <td colspan="5" class="text-center">
+            {{ pagination(faunas, 'page') }}
+          </td>
+        </tr>
+      </tfoot>
     </table>
-    </div>
   </div>
 </div>
 
 
-  <div class="modal" id='delete_modal' tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Eliminar individuo de fauna</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <p>¿Estás seguro de que deseas eliminar este individuo?</p>
-        </div>
-        <div class="modal-footer">
-          <form class="form_m_d" method="post">
-            <button type="submit" class="btn btn-primary">Eliminar</button>
-          </form>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-        </div>
+<div class="modal" id='delete_modal' tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Eliminar individuo de fauna</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>¿Estás seguro de que deseas eliminar este individuo?</p>
+      </div>
+      <div class="modal-footer">
+        <form class="form_m_d" method="post">
+          <button type="submit" class="btn btn-primary">Eliminar</button>
+        </form>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
       </div>
     </div>
   </div>
+</div>
 
 {% endblock %}
 {% block javascripts %}
