--- a/app/Resources/views/flora/index.xls.twig
+++ b/app/Resources/views/flora/index.xls.twig
@@ -4,27 +4,30 @@
    <input hidden id="specie" class="form-control" name="specie">
    <input hidden id="subspecie" class="form-control" name="subspecie">
    <input hidden id="format" class="form-control" name="_format">
-   <button id="btPrint" class="btn btn-info" type="submit">Guardar</button>
+   <button id="btPrint" class="btn btn-info mt-lg-3 ml-lg-3" type="submit">Decargar</button>
   </form>
     <dynamic-page>
-      <h1>Listado Floras</h1>
+      <div class="container">
+      <h1 class="text-center mb-lg-4">Listado de individuos de flora</h1>
       <table class="table row-border hover stripe" name="TABLA">
-          <thead class="thead-dark">
-                  <th>Especie</th>
-                  <th>Subespecie</th>
-                  <th>Nombre</th>
-                  <th>Area</th>
-                  <th>Fecha de plantación</th>
-              </tr>
-          {% for flora in floras %}
-              <tr>
-                  <td>{{flora.subspecie.specie.name}}</td>
-                  <td>{{ flora.subspecie.name }}</td>
-                  <td>{{ flora.name }}</td>
-                  <td>{{ flora.area.name }}</td>
-                  <td>{{ flora.plantationDate}}</td>
-              <tr>
-              {% endfor %}
+        <thead class="thead-light">
+          <th>Especie</th>
+          <th>Subespecie</th>
+          <th>Nombre</th>
+          <th>Area</th>
+          <th>Fecha de plantación</th>
+        </thead>
+        <tbody>
+        {% for flora in floras %}
+          <tr>
+            <td>{{flora.subspecie.specie.name}}</td>
+            <td>{{ flora.subspecie.name }}</td>
+            <td>{{ flora.name }}</td>
+            <td>{{ flora.area.name }}</td>
+            <td>{{ flora.plantationDate}}</td>
+          </tr>
+        {% endfor %}
+        </tbody>
       </table>
     </dynamic-page>
 </pdf>
@@ -32,8 +35,8 @@
 <link href="{{ asset('bootstrap/css/style.css') }}" rel="stylesheet">
 <link href="{{ asset('bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
 <script>
-$('#specie').val("{{params.specie}}");
-$('#subspecie').val("{{params.subspecie}}");
-$('#area').val("{{params.area}}");
-$('#format').val('xls');
+  $('#specie').val("{{params.specie}}");
+  $('#subspecie').val("{{params.subspecie}}");
+  $('#area').val("{{params.area}}");
+  $('#format').val('xls');
 </script>
