--- a/app/Resources/views/flspecie/edit.html.twig
+++ b/app/Resources/views/flspecie/edit.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Editar especie {% endblock %}
+{% block title %} Editar especie de flora {% endblock %}
 
 {% block body %}
   <div class="container">
     <div class="row">
       <div class="col-md-5 col-center">
-        <h1 class="text-center">Editar especie</h1>
+        <h1 class="text-center">Editar especie de flora</h1>
         <br>
         <br>
 
