--- a/app/Resources/views/flsubspecie/index.html.twig
+++ b/app/Resources/views/flsubspecie/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Subespecies de Flora {% endblock %}
+{% block title %} Subespecies de flora {% endblock %}
 
 {% block stylesheets %}
   <link rel="stylesheet" type="text/css" href="{{ asset('scripts/dataTables/datatables.min.css') }}">
@@ -11,47 +11,48 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 col-center">
-        <h1>Subespecies de Flora</h1>
+        <h1>Subespecies de flora</h1>
         <br>
-        <a class="btn btn-info float-right btn-m-r" href="{{ path('flsubspecie_new') }}">Nueva subespecie</a>
-          <table id="flsubspecie-table" class="table row-border hover stripe" name="TABLA">
-            <thead class="thead-dark">
-              <tr>
-                <th width="50%">Nombre</th>
-                <th width="35%">Especie</th>
-                <th width="25%"></th>
-              </tr>
-            </thead>
-            <tbody>
-            {% for fLSubspecie in fLSubspecies %}
-              <tr>
-                <td>{{ fLSubspecie.name }}</ts>
-                <td>{{ fLSubspecie.specie }}</td>
-                <td>
-                  <a class="btn btn-success" href="{{ path('flsubspecie_edit', { 'id': fLSubspecie.id }) }}">
-                    <i class="fa fa-pencil"></i>
-                  </a>
-                  <input class="flsubspecie_id" value="{{fLSubspecie.id}}" hidden>
-                  <button type="button" class="button_delete btn btn-danger" data-toggle="modal" data-target="#delete_modal">
-                    <i class="fa fa-trash"></i>
-                  </button>
-                </td>
-              </tr>
-            {% else %}
-                <tr>
-                    <td colspan="3" class="text-center">
-                        <em>No fLSubspecies</em>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-            <tfoot>
+        <a class="btn btn-info float-right btn-m-r mb-lg-3" href="{{ path('flsubspecie_new') }}">Nueva subespecie</a>
+
+        <table id="flsubspecie-table" class="table row-border hover stripe" name="TABLA">
+          <thead class="thead-light">
             <tr>
-                <td colspan="3" class="text-center">
-                    {{ pagination(fLSubspecies, 'page') }}
-                </td>
+              <th width="45%">Nombre</th>
+              <th width="40%">Especie</th>
+              <th width="10%"></th>
             </tr>
-            </tfoot>
+          </thead>
+          <tbody>
+          {% for fLSubspecie in fLSubspecies %}
+            <tr>
+              <td>{{ fLSubspecie.name }}</ts>
+              <td>{{ fLSubspecie.specie }}</td>
+              <td>
+                <a class="btn btn-success" href="{{ path('flsubspecie_edit', { 'id': fLSubspecie.id }) }}">
+                  <i class="fa fa-pencil"></i>
+                </a>
+                <input class="flsubspecie_id" value="{{fLSubspecie.id}}" hidden>
+                <button type="button" class="button_delete btn btn-danger" data-toggle="modal" data-target="#delete_modal">
+                  <i class="fa fa-trash"></i>
+                </button>
+              </td>
+            </tr>
+          {% else %}
+            <tr>
+              <td colspan="3" class="text-center">
+                <em>No hay subespecies de flora para mostrar</em>
+              </td>
+            </tr>
+          {% endfor %}
+          </tbody>
+          <tfoot>
+            <tr>
+              <td colspan="3" class="text-center">
+                {{ pagination(fLSubspecies, 'page') }}
+              </td>
+            </tr>
+          </tfoot>
         </table>
 
       </div>
@@ -59,27 +60,27 @@
   </div>
 
 
-    <div class="modal" id='delete_modal' tabindex="-1" role="dialog">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Eliminar subespecie</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <p>¿Estás seguro de que deseas eliminar esta subespecie?</p>
-          </div>
-          <div class="modal-footer">
-            <form class="form_m_d" method="post">
-              <button type="submit" class="btn btn-primary">Eliminar</button>
-            </form>
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-          </div>
+  <div class="modal" id='delete_modal' tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Eliminar subespecie</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>¿Estás seguro de que deseas eliminar esta subespecie?</p>
+        </div>
+        <div class="modal-footer">
+          <form class="form_m_d" method="post">
+            <button type="submit" class="btn btn-primary">Eliminar</button>
+          </form>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
         </div>
       </div>
     </div>
+  </div>
 
 {% endblock %}
 {% block javascripts %}
@@ -96,13 +97,10 @@
        "info":     false
     });
   });
-</script>
-
-<script>
-
-$('#flsubspecie-table').on("click", ".button_delete", function() {
-  var id_flsubspecie = $(this).closest('tr').find('.flsubspecie_id').val();
-  $('.form_m_d').attr('action', '/flsubspecie/'+id_flsubspecie);
-});
+  
+  $('#flsubspecie-table').on("click", ".button_delete", function() {
+    var id_flsubspecie = $(this).closest('tr').find('.flsubspecie_id').val();
+    $('.form_m_d').attr('action', '/flsubspecie/'+id_flsubspecie);
+  });
 </script>
 {% endblock %}
