--- a/web/bootstrap/css/style.css
+++ b/web/bootstrap/css/style.css
@@ -57,20 +57,29 @@ section.principal  {
 
 
 body {
-  margin-bottom: 60px;
+  width: 100%;
+  height: auto;
 }
 
-.footer {
+footer {
+  background: #f2f2f2;
   padding-top: 1em;
   padding-bottom: 1em;
-  bottom: 0;
   width: 100%;
   float: left;
   text-align: center;
   position: fixed;
-  height: 60px;
-  background-color: #f2f2f2;
+  bottom: 0;
 }
+
+/*footer{
+  position: fixed;
+  left: 0;
+  bottom: 0px;
+  width: 100%;
+  height: 50px;
+  background-color: #f2f2f2;
+}*/
 
 @media (max-width: 1200px) {
 
